# moonlight-quest

./: .gitattributes  .gitignore  BUILD.md  Dockerfile.linux-build  README.md  build.sh  docker-build-linux.sh  export_presets.cfg  main.gd  main.tscn  nightfall-quest.desktop  openxr_action_map.tres  project.godot  ui-mockup.html
addons/godotopenxrvendors/.bin/android/debug/: godotopenxr-androidxr-debug.aar  godotopenxr-khronos-debug.aar  godotopenxr-lynx-debug.aar  godotopenxr-magicleap-debug.aar  godotopenxr-meta-debug.aar  godotopenxr-pico-debug.aar
addons/godotopenxrvendors/.bin/android/release/: godotopenxr-androidxr-release.aar  godotopenxr-khronos-release.aar  godotopenxr-lynx-release.aar  godotopenxr-magicleap-release.aar  godotopenxr-meta-release.aar  godotopenxr-pico-release.aar
addons/godotopenxrvendors/.bin/macos/template_debug/libgodotopenxrvendors.macos.framework/: libgodotopenxrvendors.macos
addons/godotopenxrvendors/.bin/macos/template_release/libgodotopenxrvendors.macos.framework/: libgodotopenxrvendors.macos
addons/nightfall-stream/: BUILD_PLAN.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
addons/nightfall-stream/include/: platform_audio.h  platform_decoder.h  platform_http.h  platform_mdns.h
addons/nightfall-stream/src/: nf_log.h  nightfall_stream.cpp  nightfall_stream.h  register_types.cpp  register_types.h
addons/nightfall-stream/src/audio/: audio_renderer.cpp  audio_renderer.h  miniaudio_backend.cpp  miniaudio_backend.h  opus_decoder.cpp  opus_decoder.h  spsc_ring.h
addons/nightfall-stream/src/config/: computer_manager.cpp  computer_manager.h  config_manager.cpp  config_manager.h  stream_config.cpp  stream_config.h
addons/nightfall-stream/src/input/: input_bridge.cpp  input_bridge.h
addons/nightfall-stream/src/network/: curl_http_client.cpp  curl_http_client.h  http_requester.cpp  http_requester.h  mdns_browser.cpp  mdns_browser.h
addons/nightfall-stream/src/video/: depth_bridge.cpp  depth_bridge.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  stream_connection.cpp  stream_connection.h  texture_uploader.cpp  texture_uploader.h  yuv_shader.h
addons/nightfall-stream/vcpkg-overlay/moonlight-common-c/: 0001-add-install-rules.patch  0002-fix-clang-multiversioning-headers.patch  portfile.cmake  vcpkg.json
android/src/main/java/com/godot/game/: DepthEstimator.java  GodotApp.java
doc/: 4k-performance-optimization.md
models/xbox/: xbox_one_controller.fbx
src/: auto_detect.gd  composite_screen.gdshader  depth_estimator.gd  host_discovery.gd  input_handler.gd  keyboard_screen.gdshader  openxr_action_map.tres  screen_manager.gd  settings_controller.gd  star.gdshader  state_manager.gd  stereo_screen.gdshader  stream_backend.gd  stream_manager.gd  ui_controller.gd  virtual_keyboard.gd  welcome_screen.gd  xr_interaction.gd
src/shaders/: circle_cursor.gdshader  grab_bar.gdshader  keyboard_screen.gdshader  pointer_cursor.gdshader  star.gdshader  stereo_screen.gdshader  yuv_display.gdshader
tools/: convert_depth_anything_v2.py
vcpkg-overlay/triplets/: arm64-android.cmake
